--- a/MASCARILLAS.html
+++ b/MASCARILLAS.html
@@ -23,13 +23,15 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <div class="icons">
-                    <i class="fa-solid fa-circle-arrow-left"></i>
-                    <img src="images/logo.jpeg" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <a href="MENU.html" class="fa-solid fa-circle-arrow-left"></a>
+                    <img src="images/logo.png" alt="">
+                    <label class="heart-checkbox">
+                        <input type="checkbox" />
+                        <i class="fa fa-heart"></i>
+                    </label>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
-                        <span>MASCARILLAS</span>
                         <h3>MASCARILLA MEDIA CARA</h3>
                         <p></p>
                         <br>
@@ -38,18 +40,18 @@
                         <img src="mascarillas/1.png" alt="">
                     </div>
                 </div>
-                <br>
-                <a href="MENU.html" class="btn-1">REGRESAR</a>
             </div> 
             <div class="swiper-slide">
                 <div class="icons">
-                    <i class="fa-solid fa-circle-arrow-left"></i>
-                    <img src="images/logo.jpeg" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <a href="MENU.html" class="fa-solid fa-circle-arrow-left"></a>
+                    <img src="images/logo.png" alt="">
+                    <label class="heart-checkbox">
+                        <input type="checkbox" />
+                        <i class="fa fa-heart"></i>
+                    </label>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
-                        <span>MASCARILLAS</span>
                         <h3>MASCARILLA CARA COMPLETA</h3>
                         <p> </p>
                         <br>
@@ -58,18 +60,18 @@
                         <img src="mascarillas/2.png" alt="">
                     </div>
                 </div>
-                <br>
-                <a href="MENU.html" class="btn-1">REGRESAR</a>
             </div>
             <div class="swiper-slide">
                 <div class="icons">
-                    <i class="fa-solid fa-circle-arrow-left"></i>
-                    <img src="images/logo.jpeg" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <a href="MENU.html" class="fa-solid fa-circle-arrow-left"></a>
+                    <img src="images/logo.png" alt="">
+                    <label class="heart-checkbox">
+                        <input type="checkbox" />
+                        <i class="fa fa-heart"></i>
+                    </label>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
-                        <span>MASCARILLA</span>
                         <h3>CARTUCHOS PARA VAPORES Y GASES</h3>
                         <p> </p>
                         <br>
@@ -78,18 +80,18 @@
                         <img src="mascarillas/3.png" alt="">
                     </div>
                 </div>
-                <br>
-                <a href="MENU.html" class="btn-1">REGRESAR</a>
             </div>
             <div class="swiper-slide">
                 <div class="icons">
-                    <i class="fa-solid fa-circle-arrow-left"></i>
-                    <img src="images/logo.jpeg" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <a href="MENU.html" class="fa-solid fa-circle-arrow-left"></a>
+                    <img src="images/logo.png" alt="">
+                    <label class="heart-checkbox">
+                        <input type="checkbox" />
+                        <i class="fa fa-heart"></i>
+                    </label>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
-                        <span>MASCARILLA</span>
                         <h3>FILTROS</h3>
                         <p>El prefiltro 3M 5N11 brinda una efectiva e higiénica protección respiratoria contra aerosoles
                             sólidos y líquidos sin aceite.</p>
@@ -99,18 +101,18 @@
                         <img src="mascarillas/4.png" alt="">
                     </div>
                 </div>
-                <br>
-                <a href="MENU.html" class="btn-1">REGRESAR</a>
             </div>
             <div class="swiper-slide">
                 <div class="icons">
-                    <i class="fa-solid fa-circle-arrow-left"></i>
-                    <img src="images/logo.jpeg" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <a href="MENU.html" class="fa-solid fa-circle-arrow-left"></a>
+                    <img src="images/logo.png" alt="">
+                    <label class="heart-checkbox">
+                        <input type="checkbox" />
+                        <i class="fa fa-heart"></i>
+                    </label>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
-                        <span>MASCARILLAS</span>
                         <h3>EQUIPO DE RESPIRACION AUTONOMA</h3>
                         <p> </p>
                         <br>
@@ -119,18 +121,18 @@
                         <img src="https://www.dastecsrl.com.ar/uploads/productos/scott-safety/airPak2.png" alt="">
                     </div>
                 </div>
-                <br>
-                <a href="MENU.html" class="btn-1">REGRESAR</a>
             </div>
             <div class="swiper-slide">
                 <div class="icons">
-                    <i class="fa-solid fa-circle-arrow-left"></i>
-                    <img src="images/logo.jpeg" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <a href="MENU.html" class="fa-solid fa-circle-arrow-left"></a>
+                    <img src="images/logo.png" alt="">
+                    <label class="heart-checkbox">
+                        <input type="checkbox" />
+                        <i class="fa fa-heart"></i>
+                    </label>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
-                        <span>MASCARILLA</span>
                         <h3>EQUIPO PARA LINEA DE AIRE</h3>
                         <p> </p>
                         <br>
@@ -139,18 +141,18 @@
                         <img src="mascarillas/5.png" alt="">
                     </div>
                 </div>
-                <br>
-                <a href="MENU.html" class="btn-1">REGRESAR</a>
             </div>
             <div class="swiper-slide">
                 <div class="icons">
-                    <i class="fa-solid fa-circle-arrow-left"></i>
-                    <img src="images/logo.jpeg" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <a href="MENU.html" class="fa-solid fa-circle-arrow-left"></a>
+                    <img src="images/logo.png" alt="">
+                    <label class="heart-checkbox">
+                        <input type="checkbox" />
+                        <i class="fa fa-heart"></i>
+                    </label>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
-                        <span>MASCARILLA</span>
                         <h3>MASCARILLAS DESECHABLES</h3>
                         <p></p>
                             <br>
@@ -159,8 +161,6 @@
                         <img src="https://cdn11.bigcommerce.com/s-lirzegtuuj/images/stencil/1280x1280/products/6211/11251/SRER002-0__77809.1695764069.png?c=1?imbypass=on" alt="">
                     </div>
                 </div>
-                <br>
-                <a href="MENU.html" class="btn-1">REGRESAR</a>
             </div>
          </div>
     </div>
