--- a/CABEZALES.html
+++ b/CABEZALES.html
@@ -31,14 +31,29 @@
                     </label>
                 </div>
                 <div class="product-s">
-                    <div class="product-text">
-                        <h3>CARETAS PARA SOLDAR</h3>
-                        <p></p>
-                        <br>
-                    </div>
-                    <div class="product-i">
-                        <img src="cabezales/5.png" alt="">
-                    </div>
+                <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>CARETAS PARA SOLDAR</h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="cabezales/5.png" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p>Careta de soldador fabricado de termoplástico de alta resistencia al calor. Visor abatible, arnés con ajuste tipo matraca. Para uso en caretas de soldadura de arco eléctrico.
+                                    <p>
+                            </div></td>
+                            <td><div class="product-text">
+                                <p>
+                                    Marca: STEELPRO
+                                    <br>
+                                    Modelo: AL-SP-0060
+                                    <p>
+                            </div></td>      
+                        </tr>
+                    </table>
                 </div>
             </div> 
             <div class="swiper-slide">
@@ -51,14 +66,28 @@
                     </label>
                 </div>
                 <div class="product-s">
-                    <div class="product-text">
-                        <h3>MICAS CLARAS</h3>
-                        <p></p>
-                        <br>
-                    </div>
-                    <div class="product-i">
-                        <img src="cabezales/7.png" alt="">
-                    </div>
+                   <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>MICAS CLARAS</h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="cabezales/7.png" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p> Mica reemplazable para protector facial con medidas de 8” (20.32 cm) x 15.5 (39.37 cm) 0.040 de espesor, filtra el 99% de los rayos ultravioleta. <p>
+                            </div></td>
+                            <td><div class="product-text">
+                                <p>
+				Marca: DERMA CARE
+                                    <br>
+				Modelo: AL-441
+                                    <p>
+                            </div></td>      
+                        </tr>
+                    </table>
                 </div>
             </div> 
             <div class="swiper-slide">
@@ -71,14 +100,27 @@
                     </label>
                 </div>
                 <div class="product-s">
-                    <div class="product-text">
-                        <h3>MICAS VERDES</h3>
-                        <p></p>
-                        <br>
-                    </div>
-                    <div class="product-i">
-                        <img src="https://multiplicate1.s3.us-east-2.amazonaws.com/media/1/4/2023/05/min/9a66968279d14077cb8708d13f557e7a-1000x1000.png" alt="">
-                    </div>
+                    <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>MICAS VERDES</h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="https://multiplicate1.s3.us-east-2.amazonaws.com/media/1/4/2023/05/min/9a66968279d14077cb8708d13f557e7a-1000x1000.png" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p>La mica facial de 3m en color verde oscuro aluminizada ayuda a proteger contra partículas aéreas y calor en altas temperaturas. <p>
+                            </div></td>
+                            <td><div class="product-text">
+                                <p>
+                                    <br>
+                                    Marca: 3M™
+                                    <p>
+                            </div></td>      
+                        </tr>
+                    </table>
                 </div>
             </div> 
             <div class="swiper-slide">
@@ -91,14 +133,26 @@
                     </label>
                 </div>
                 <div class="product-s">
-                    <div class="product-text">
-                        <h3>POLICARBONATOS</h3>
-                        <p></p>
-                        <br>
-                    </div>
-                    <div class="product-i">
-                        <img src="cabezales/4.png" alt="">
-                    </div>
+                    <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>POLICARBONATO</h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="cabezales/poli.png" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p>El policarbonato es un material versátil que se utiliza en una variedad de aplicaciones debido a su resistencia, ligereza y transparencia<p>
+                            </div></td>
+                            <td><div class="product-text">
+                                <p>
+                                    <br>
+                                    <p>
+                            </div></td>      
+                        </tr>
+                    </table>
                 </div>
             </div> 
             <div class="swiper-slide">
