--- a/CABEZALES.html
+++ b/CABEZALES.html
@@ -139,7 +139,7 @@
                                 <h3>POLICARBONATO</h3>
                             </div></td>
                             <td><div class="product-i">
-                                <img src="cabezales/poli.png" alt="">
+                                <img src="cabezales/4.png" alt="">
                             </div></td>       
                         </tr>
                         <tr>
