--- a/CABEZALES.html
+++ b/CABEZALES.html
@@ -111,14 +111,11 @@
                         </tr>
                         <tr>
                             <td><div class="product-text">
-                                <p>La mica facial de 3m en color verde oscuro aluminizada ayuda a proteger contra partículas aéreas y calor en altas temperaturas. <p>
-                            </div></td>
-                            <td><div class="product-text">
-                                <p>
-                                    <br>
+                                <p>La mica facial de 3m en color verde oscuro aluminizada ayuda a proteger contra partículas aéreas y calor en altas temperaturas. 
+				    <br>
                                     Marca: 3M™
-                                    <p>
-                            </div></td>      
+				    <p>
+                            </div></td>   
                         </tr>
                     </table>
                 </div>
