--- a/BANDOLAS.html
+++ b/BANDOLAS.html
@@ -46,10 +46,10 @@
                             </div></td>
                             <td><div class="product-text">
                                 <p>
-                                    Marca: DERMA CARE
+                                    Marca:<br> DERMA CARE
                                     <br>
 				    <br>
-                                    Modelo: PA-30C
+                                    Modelo:<br> PA-30C
                                     <p>
                             </div></td>      
                         </tr>
@@ -227,6 +227,7 @@
                                 <p>
                                     Marca: KONGMMERCE
                                     <br>
+				    <br>
                                     Modelo: <br>EFA-267-PAQ
                                     <p>
                             </div></td>      
