--- a/GUANTES.html
+++ b/GUANTES.html
@@ -31,14 +31,29 @@
                     </label>
                 </div>
                 <div class="product-s">
-                    <div class="product-text">
-                        <h3>GUANTES DE ASBESTO</h3>
-                        <p></p>
-                        <br>
-                    </div>
-                    <div class="product-i">
-                        <img src="guantes/3.png" alt="">
-                    </div>
+                    <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>GUANTES DE ASBESTO</h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="guantes/3.png" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p>Par de Guantes para altas temperaturas, elaborados en asbesto de color verde y forro 100% algodón, cosido con hilo kevlar 30/4 cabos. Se puede usar para el manejo de piezas calientes en fundición. Medida 35 cm. Temperaturas de exposición recomendadas: 150° C en forma estática, 500° de forma discontinua.<p>
+                            </div></td>
+                            <td><div class="product-text">
+                                <p>
+                                    Marca: GAROD
+                                    <br>
+                                    <br>
+                                    Modelo:<br> GUANTES ASBESTO 35
+                                    <p>
+                            </div></td>      
+                        </tr>
+                    </table>
                 </div>
             </div> 
             <div class="swiper-slide">
@@ -51,34 +66,29 @@
                     </label>
                 </div>
                 <div class="product-s">
-                    <div class="product-text">
-                        <h3>GUANTE ALUMINNIZADO DE KEVLAR 13 In FORRO</h3>
-                        <p> </p>
-                        <br>
-                    </div>
-                    <div class="product-i">
-                        <img src="guantes/1.png" alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="swiper-slide">
-                <div class="icons">
-                    <a href="MENU.html" class="fa-solid fa-circle-arrow-left"></a>
-                    <img src="images/logo.png" alt="">
-                    <label class="heart-checkbox">
-                        <input type="checkbox" />
-                        <i class="fa fa-heart"></i>
-                    </label>
-                </div>
-                <div class="product-s">
-                    <div class="product-text">
-                        <h3>GUANTE DESECHABLE(NITRILO, NYLON)</h3>
-                        <p> </p>
-                        <br>
-                    </div>
-                    <div class="product-i">
-                        <img src="guantes/2.png" alt="">
-                    </div>
+                    <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>GUANTES ALUMINIZADOS DE KEVLAR</h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="guantes/1.png" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p>Fabricado con aramida aluminizada, una fibra inherentemente ignífuga, que aporta una resistencia a la abrasión comparada al acero. La aramida es un material para la insolación, por lo que se mantiene frío y no guarda calor, ofreciendo mayor comodidad y seguridad al usuario.<p>
+                            </div></td>
+                            <td><div class="product-text">
+                                <p>
+                                    Marca: <br>DAVSA MÉXICO
+                                    <br>
+                                    <br>
+                                    Modelo:<br> KEVLAR
+                                    <p>
+                            </div></td>      
+                        </tr>
+                    </table>
                 </div>
             </div>
             <div class="swiper-slide">
@@ -211,14 +221,28 @@
                     </label>
                 </div>
                 <div class="product-s">
-                    <div class="product-text">
-                        <h3>GUANTE DE NITRILO</h3>
-                        <p></p>
-                        <br>
-                    </div>
-                    <div class="product-i">
-                        <img src="guantes/13.png" alt="">
-                    </div>
+                    <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>GUANTES DESECHABLES DE NITRILO</h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="https://viresa.com.mx/product/image/large/mapa-stansolva15-m_0.png" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p>El nitrilo en una de sus presentaciones más usadas, ya que, por las características de este modelo, con su grosor y diseño, permite alto rango de protección procesos mecánicos e industrias químicas<p>
+                            </div></td>
+                            <td><div class="product-text">
+                                <p>
+                                    Marca:<br> DERMA CARE
+                                    <br><br>
+                                    Modelo:<br> 67-175
+                                <p>
+                            </div></td>      
+                        </tr>
+                    </table>
                 </div>
             </div> 
             <div class="swiper-slide">
