--- a/GUANTES.html
+++ b/GUANTES.html
@@ -101,14 +101,28 @@
                     </label>
                 </div>
                 <div class="product-s">
-                    <div class="product-text">
-                        <h3>GUANTES DE CARNAZA CORTO</h3>
-                        <p></p>
-                        <br>
-                    </div>
-                    <div class="product-i">
-                        <img src="guantes/5.png" alt="">
-                    </div>
+                    <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>GUANTES DE CARNAZA CORTO</h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="guantes/5.png" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p>Guante corto de 10” pulgadas de largo, fabricado en carnaza de res, cosido con hilo de poliéster. La carnaza tiene muy buena resistencia, ofreciendo al usuario condiciones de seguridad.<p>
+                            </div></td>
+                            <td><div class="product-text">
+                                <p>
+                                    Marca:<br> DERMA CARE
+                                    <br><br>
+                                    Modelo:<br> 93-400
+                                    <p>
+                            </div></td>      
+                        </tr>
+                    </table>
                 </div>
             </div> 
             <div class="swiper-slide">
